--- a/package.json
+++ b/package.json
@@ -21,12 +21,22 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.8",
     "@prisma/client": "^5.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@upstash/rag-chat": "^2.0.2",
+    "@upstash/redis": "^1.34.3",
+    "ai": "^3.4.33",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.11.11",
     "geist": "^1.3.0",
+    "lucide-react": "^0.454.0",
     "next": "^15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.3"
   },
   "devDependencies": {
