✨ Update env example

--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,16 @@
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="postgresql://postgres:password@localhost:5432/smart-reader"
+# Required for sending
+QSTASH_URL=""
+QSTASH_TOKEN=""
+
+# Required for receiving
+QSTASH_CURRENT_SIGNING_KEY=""
+QSTASH_NEXT_SIGNING_KEY=""
+
+UPSTASH_VECTOR_REST_URL=""
+UPSTASH_VECTOR_REST_TOKEN=""
+
+UPSTASH_REDIS_REST_URL=""
+UPSTASH_REDIS_REST_TOKEN=""
